--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "expense-tracker-package",
   "private": true,
+  "homepage": "https://syddevv.github.io/Expense-Tracker",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -24,6 +25,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   }
